# snake-ai

./: README.md  pyproject.toml  requirements.txt
main/: double_demonstration.py  hamiltonian_agent.py  snake_game.py  snake_game_custom_wrapper_cnn.py  snake_game_custom_wrapper_mlp.py  test_cnn.py  test_mlp.py  train_cnn.py  train_mlp.py
